--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,6 +1,50 @@
 <header class="header">
-  <div class="header__top"></div>
-  <div class="header__content"></div>
+  <div class="header__top">
+    <div class="container">
+      <div class="header__top-inner">
+        <a class="logo" href="#">
+          <img class="logo__img" src="./img/logo.svg" alt="Логотип" />
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">HOME</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">ABOUT US</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">PORTFOLIO</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">OUR TEAM</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">BLOG</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">CONTACT</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+  <div class="header__content">
+    <div class="container">
+      <div class="header__content-inner">
+        <h1 class="header__title">
+          O...MARKETING
+        </h1>
+        <h2 class="header__subtitle">
+          DIGITAL MARKETING AGENCY
+        </h2>
+        <a class="header__icon" href="">
+          <img src="./img/mouse.svg" alt="Компьютерная мышка иконка">
+        </a>
+      </div>
+    </div>
+  </div>
 </header>
 
 @@include('mobile-nav.html')
