--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Стартовый шаблон</title>
+    <title>O...MARKETING</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:ital,wght@0,700;0,400;0,500&family=Open+Sans:wght@300;400&family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     @@include('blocks/header.html')
     @@include('blocks/about.html')
+    @@include('blocks/expertise.html')
     @@include('blocks/footer.html')
     <script src="./js/index.bundle.js"></script>
   </body>
