feat: add section Magic

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,6 +12,7 @@
     @@include('blocks/header.html')
     @@include('blocks/about.html')
     @@include('blocks/expertise.html')
+    @@include('blocks/magic.html')
     @@include('blocks/footer.html')
     <script src="./js/index.bundle.js"></script>
   </body>
