feat: add section Portfolio

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>O...MARKETING</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:ital,wght@0,700;0,400;0,500&family=Open+Sans:wght@300;400&family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
@@ -13,7 +14,9 @@
     @@include('blocks/about.html')
     @@include('blocks/expertise.html')
     @@include('blocks/magic.html')
+    @@include('blocks/portfolio.html')
     @@include('blocks/footer.html')
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/index.bundle.js"></script>
   </body>
 </html>
