feat: add section Slider-blog

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,7 @@
     <title>O...MARKETING</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:ital,wght@0,700;0,400;0,500&family=Open+Sans:wght@300;400&family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
@@ -15,8 +16,10 @@
     @@include('blocks/expertise.html')
     @@include('blocks/magic.html')
     @@include('blocks/portfolio.html')
+    @@include('blocks/slider-blog.html')
     @@include('blocks/footer.html')
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/index.bundle.js"></script>
   </body>
 </html>
