--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,6 +17,7 @@
     @@include('blocks/magic.html')
     @@include('blocks/portfolio.html')
     @@include('blocks/slider-blog.html')
+    @@include('blocks/team.html')
     @@include('blocks/footer.html')
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
