--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,7 @@
     @@include('blocks/slider-blog.html')
     @@include('blocks/team.html')
     @@include('blocks/pricing.html')
+    @@include('blocks/clients.html')
     @@include('blocks/footer.html')
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
