--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,5 +1,39 @@
 <footer class="footer">
-  <div class="container">
-    <h2>Footer</h2>
+  <div class="footer__top">
+    <a href="#" class="footer__logo">
+      <img src="./img/logo-light.svg" alt="Логотип" />
+    </a>
+
+    <ul class="footer__social">
+      <li class="footer__social-item">
+        <a class="footer__social-link" href="#">FACEBOOK</a>
+      </li>
+      <li class="footer__social-item">
+        <a class="footer__social-link" href="#">TWITTER</a>
+      </li>
+      <li class="footer__social-item">
+        <a class="footer__social-link" href="#">GOOGLE+</a>
+      </li>
+      <li class="footer__social-item">
+        <a class="footer__social-link" href="#">BEHANCE</a>
+      </li>
+      <li class="footer__social-item">
+        <a class="footer__social-link" href="#">DRIBBLE</a>
+      </li>
+      <li class="footer__social-item">
+        <a class="footer__social-link" href="#">INSTAGRAM</a>
+      </li>
+    </ul>
+    <div class="footer__contacts">
+      <adress class="adress">Россия, Псков, ул.Максима Горького, 32</adress>
+      <a class="phone" href="tel:+79532531991">8(953)253-19-91</a>
+      <a class="email" href="mailto:info@mail.com">info@mail.com</a>
+    </div>
+    <a class="go-top" href="#">
+      <img src="img/angle-up.svg" alt="Стрелка вверх" />
+    </a>
+  </div>
+  <div class="footer__copy">
+    <p>@2020 O...Marketing</p>
   </div>
 </footer>
