--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     @@include('blocks/header.html')
-    @@include('blocks/about.html')
+    <!-- @@include('blocks/about.html')
     @@include('blocks/expertise.html')
     @@include('blocks/magic.html')
     @@include('blocks/portfolio.html')
@@ -21,7 +21,7 @@
     @@include('blocks/pricing.html')
     @@include('blocks/clients.html')
     @@include('blocks/connection.html')
-    @@include('blocks/footer.html')
+    @@include('blocks/footer.html') -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/index.bundle.js"></script>
