feat: add adaptive About block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     @@include('blocks/header.html')
-    <!-- @@include('blocks/about.html')
-    @@include('blocks/expertise.html')
+    @@include('blocks/about.html')
+    <!-- @@include('blocks/expertise.html')
     @@include('blocks/magic.html')
     @@include('blocks/portfolio.html')
     @@include('blocks/slider-blog.html')
