--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -1,7 +1,7 @@
 <section class="about">
   <div class="container">
     <div class="about__inner">
-      <h2 class="title">About Us</h2>
+      <h2 class="title about__title">About Us</h2>
       <div class="about__text">
         <p>
           Практика показывает, что большие продажи далеко не всегда зависят от
