feat: adaptive Expertise block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,8 +13,8 @@
   <body>
     @@include('blocks/header.html')
     @@include('blocks/about.html')
-    <!-- @@include('blocks/expertise.html')
-    @@include('blocks/magic.html')
+    @@include('blocks/expertise.html')
+    <!-- @@include('blocks/magic.html')
     @@include('blocks/portfolio.html')
     @@include('blocks/slider-blog.html')
     @@include('blocks/team.html')
