--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,8 +14,8 @@
     @@include('blocks/header.html')
     @@include('blocks/about.html')
     @@include('blocks/expertise.html')
-    <!-- @@include('blocks/magic.html')
-    @@include('blocks/portfolio.html')
+    @@include('blocks/magic.html')
+    <!-- @@include('blocks/portfolio.html')
     @@include('blocks/slider-blog.html')
     @@include('blocks/team.html')
     @@include('blocks/pricing.html')
