feat: add adaptive Portfolio block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,8 +15,8 @@
     @@include('blocks/about.html')
     @@include('blocks/expertise.html')
     @@include('blocks/magic.html')
-    <!-- @@include('blocks/portfolio.html')
-    @@include('blocks/slider-blog.html')
+    @@include('blocks/portfolio.html')
+    <!-- @@include('blocks/slider-blog.html')
     @@include('blocks/team.html')
     @@include('blocks/pricing.html')
     @@include('blocks/clients.html')
