feat: add adaptive Slider blog block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,8 +16,8 @@
     @@include('blocks/expertise.html')
     @@include('blocks/magic.html')
     @@include('blocks/portfolio.html')
-    <!-- @@include('blocks/slider-blog.html')
-    @@include('blocks/team.html')
+    @@include('blocks/slider-blog.html')
+    <!-- @@include('blocks/team.html')
     @@include('blocks/pricing.html')
     @@include('blocks/clients.html')
     @@include('blocks/connection.html')
