--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,8 +17,8 @@
     @@include('blocks/magic.html')
     @@include('blocks/portfolio.html')
     @@include('blocks/slider-blog.html')
-    <!-- @@include('blocks/team.html')
-    @@include('blocks/pricing.html')
+    @@include('blocks/team.html')
+    <!-- @@include('blocks/pricing.html')
     @@include('blocks/clients.html')
     @@include('blocks/connection.html')
     @@include('blocks/footer.html') -->
