--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,8 +18,8 @@
     @@include('blocks/portfolio.html')
     @@include('blocks/slider-blog.html')
     @@include('blocks/team.html')
-    <!-- @@include('blocks/pricing.html')
-    @@include('blocks/clients.html')
+    @@include('blocks/pricing.html')
+    <!-- @@include('blocks/clients.html')
     @@include('blocks/connection.html')
     @@include('blocks/footer.html') -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
