fix: change the text on the site

--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -29,7 +29,7 @@
       <a class="phone" href="tel:+79532531991">8(953)253-19-91</a>
       <a class="email" href="mailto:info@mail.com">info@mail.com</a>
     </div>
-    <a class="go-top" href="#">
+    <a class="go-top" href="#body">
       <img src="img/angle-up.svg" alt="Стрелка вверх" />
     </a>
   </div>
