--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -9,22 +9,22 @@
           <button class="menu__btn">@@include('menu-icon.html')</button>
           <ul class="menu__list">
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">HOME</a>
+              <a class="menu__list-link" href="#body">ГЛАВНАЯ</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">ABOUT US</a>
+              <a class="menu__list-link" href="#about">О НАС</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">PORTFOLIO</a>
+              <a class="menu__list-link" href="#portfolio">ПОРТФОЛИО</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">OUR TEAM</a>
+              <a class="menu__list-link" href="#team">КОМАНДА</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">BLOG</a>
+              <a class="menu__list-link" href="#blog">БЛОГ</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">CONTACT</a>
+              <a class="menu__list-link" href="#contact">КОНТАКТЫ</a>
             </li>
           </ul>
         </nav>
@@ -40,7 +40,7 @@
         <h2 class="header__subtitle">
           DIGITAL MARKETING AGENCY
         </h2>
-        <a class="header__icon" href="">
+        <a class="header__icon" href="#about">
           <img src="./img/mouse.svg" alt="Компьютерная мышка иконка">
         </a>
       </div>
