--- a/src/html/blocks/magic.html
+++ b/src/html/blocks/magic.html
@@ -1,7 +1,7 @@
 <section class="magic">
   <div class="container">
     <div class="magic__inner">
-      <h2 class="title magic__title">Let’s make magic.</h2>
+      <h2 class="title magic__title">Волшебство маркетинга</h2>
       <div class="magic__text">
         <p>
           Маркетинговое агентство MGN: полный комплекс маркетинговых, рекламных
