--- a/src/html/blocks/portfolio.html
+++ b/src/html/blocks/portfolio.html
@@ -1,13 +1,13 @@
-<section class="portfolio">
+<section class="portfolio" id="portfolio">
   <div class="container">
     <div class="portfolio__top">
-      <h2 class="title portfolio__title">Portfolio</h2>
+      <h2 class="title portfolio__title">Портфолио</h2>
       <div class="portfolio__filter-btn">
-        <button class="portfolio__btn" data-filter="all">ALL</button>
-        <button class="portfolio__btn" data-filter=".category-branding">BRANDING</button>
-        <button class="portfolio__btn" data-filter=".category-design">DESIGN</button>
-        <button class="portfolio__btn" data-filter=".category-photography">PHOTOGRAPHY</button>
-        <button class="portfolio__btn" data-filter=".category-illustration">ILLUSTRATION</button>
+        <button class="portfolio__btn" data-filter="all">ВСЁ</button>
+        <button class="portfolio__btn" data-filter=".category-branding">БРЕНДИНГ</button>
+        <button class="portfolio__btn" data-filter=".category-design">ДИЗАЙН</button>
+        <button class="portfolio__btn" data-filter=".category-photography">ФОТОГРАФИИ</button>
+        <button class="portfolio__btn" data-filter=".category-illustration">ИЛЛЮСТРАЦИИ</button>
       </div>
     </div>
   </div>
@@ -15,60 +15,60 @@
     <div class="portfolio__item mix category-photography">
       <img src="img/portfolio/1.jpg" alt="portfolio images" />
       <a class="portfolio__item-link" href="#">
-        SHOW PROJECT
+        ПОКАЗАТЬ ПРОЕКТ
       </a>
     </div>
     <div class="portfolio__item mix category-branding">
       <img src="img/portfolio/2.jpg" alt="portfolio images" />
       <a class="portfolio__item-link" href="#">
-        SHOW PROJECT
+        ПОКАЗАТЬ ПРОЕКТ
       </a>
     </div>
     <div class="portfolio__item mix category-photography">
       <img src="img/portfolio/3.jpg" alt="portfolio images" />
       <a class="portfolio__item-link" href="#">
-        SHOW PROJECT
+        ПОКАЗАТЬ ПРОЕКТ
       </a>
     </div>
     <div class="portfolio__item mix category-design">
       <img src="img/portfolio/4.jpg" alt="portfolio images" />
       <a class="portfolio__item-link" href="#">
-        SHOW PROJECT
+        ПОКАЗАТЬ ПРОЕКТ
       </a>
     </div>
     <div class="portfolio__item mix category-photography">
       <img src="img/portfolio/5.jpg" alt="portfolio images" />
       <a class="portfolio__item-link" href="#">
-        SHOW PROJECT
+        ПОКАЗАТЬ ПРОЕКТ
       </a>
     </div>
     <div class="portfolio__item mix category-illustration">
       <img src="img/portfolio/6.jpg" alt="portfolio images" />
       <a class="portfolio__item-link" href="#">
-        SHOW PROJECT
+        ПОКАЗАТЬ ПРОЕКТ
       </a>
     </div>
     <div class="portfolio__item mix category-branding">
       <img src="img/portfolio/7.jpg" alt="portfolio images" />
       <a class="portfolio__item-link" href="#">
-        SHOW PROJECT
+        ПОКАЗАТЬ ПРОЕКТ
       </a>
     </div>
     <div class="portfolio__item mix category-photography">
       <img src="img/portfolio/8.jpg" alt="portfolio images" />
       <a class="portfolio__item-link" href="#">
-        SHOW PROJECT
+        ПОКАЗАТЬ ПРОЕКТ
       </a>
     </div>
     <div class="portfolio__item mix category-illustration">
       <img src="img/portfolio/9.jpg" alt="portfolio images" />
       <a class="portfolio__item-link" href="#">
-        SHOW PROJECT
+        ПОКАЗАТЬ ПРОЕКТ
       </a>
     </div>
   </div>
 
-  <a class="portfolio__add" href="#"> VIEW MORE PROJECTS </a>
+  <a class="portfolio__add" href="#"> ПОСМОТРЕТЬ БОЛЬШЕ ПРОЕКТОВ </a>
 
   <blockquote class="blockquote">
     «Неважно какую историю вы рассказываете, главное – сделайте своего
@@ -86,19 +86,19 @@
     <div class="portfolio__numbers">
       <div class="portfolio__numbers-item">
         305
-        <span>Web Designs</span>
+        <span>Веб-Дизайны</span>
       </div>
       <div class="portfolio__numbers-item">
         220
-        <span>Logo Designs</span>
+        <span>Дизайны логотипа</span>
       </div>
       <div class="portfolio__numbers-item">
         52
-        <span>Print Designs</span>
+        <span>Печатные дизайны</span>
       </div>
       <div class="portfolio__numbers-item">
         88
-        <span>Mobile Apps</span>
+        <span>Мобильные приложения</span>
       </div>
     </div>
   </div>
