--- a/src/html/blocks/slider-blog.html
+++ b/src/html/blocks/slider-blog.html
@@ -1,14 +1,14 @@
-<section class="slider-blog">
+<section class="slider-blog" id="blog">
   <div class="container">
     <div class="slider-blog__inner">
 
       <div class="slider-blog__item">
         <a class="slider-blog__item-link" href="">
           <h3 class="slider-blog__item-title">
-            АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            Брендинг: создание уникального образа бизнеса
           </h3>
           <p class="slider-blog__item-descr">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Раскройте секреты создания уникального бренда, который выделяется среди конкурентов.
           </p>
         </a>
       </div>
@@ -16,10 +16,10 @@
       <div class="slider-blog__item">
         <a class="slider-blog__item-link" href="">
           <h3 class="slider-blog__item-title">
-            АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            Социальные медиа: эффективные стратегии
           </h3>
           <p class="slider-blog__item-descr">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Узнайте, как использовать социальные медиа для привлечения и удержания целевой аудитории.
           </p>
         </a>
       </div>
@@ -27,10 +27,10 @@
       <div class="slider-blog__item">
         <a class="slider-blog__item-link" href="">
           <h3 class="slider-blog__item-title">
-            АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            Инфлюенсеры: секреты успешного партнерства
           </h3>
           <p class="slider-blog__item-descr">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Раскройте потенциал сотрудничества с инфлюенсерами и увеличьте узнаваемость вашего бренда.
           </p>
         </a>
       </div>
@@ -38,10 +38,10 @@
       <div class="slider-blog__item">
         <a class="slider-blog__item-link" href="">
           <h3 class="slider-blog__item-title">
-            АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            SEO-оптимизация: секреты высоких позиций
           </h3>
           <p class="slider-blog__item-descr">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Откройте для себя стратегии SEO-оптимизации, чтобы ваш сайт занимал высокие позиции в поисковых системах.
           </p>
         </a>
       </div>
@@ -49,10 +49,10 @@
       <div class="slider-blog__item">
         <a class="slider-blog__item-link" href="">
           <h3 class="slider-blog__item-title">
-            АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            Email-маркетинг: создание продающих писем
           </h3>
           <p class="slider-blog__item-descr">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Узнайте, как создавать эффективные email-рассылки, которые привлекут внимание и увеличат продажи.
           </p>
         </a>
       </div>
@@ -60,10 +60,10 @@
       <div class="slider-blog__item">
         <a class="slider-blog__item-link" href="">
           <h3 class="slider-blog__item-title">
-            АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            Аналитика в маркетинге: измерение успеха
           </h3>
           <p class="slider-blog__item-descr">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Узнайте, как использовать аналитику для измерения эффективности ваших маркетинговых кампаний.
           </p>
         </a>
       </div>
