--- a/src/html/blocks/connection.html
+++ b/src/html/blocks/connection.html
@@ -1,6 +1,6 @@
-<section class="connection">
+<section class="connection" id="contact">
   <div class="container">
-    <h2 class="title  connection__title">Get in Touch</h2>
+    <h2 class="title  connection__title">Связаться с нами</h2>
     <form class="form" action="">
       <input type="text" placeholder="ИМЯ">
       <input type="text" placeholder="EMAIL">
