--- a/src/html/blocks/expertise.html
+++ b/src/html/blocks/expertise.html
@@ -1,19 +1,19 @@
 <section class="expertise">
   <div class="container">
-    <h2 class="title expertise__title">Our Expertise</h2>
+    <h2 class="title expertise__title">Наш опыт</h2>
     <div class="expertise__inner">
       <div class="expertise__info">
         <div class="expertise__info-item">
-          BRANDING
-          <span style="width: calc(100% - 90%);" >90%</span>
+          БРЕНДИНГ
+          <span style="width: calc(100% - 90%)">90%</span>
         </div>
         <div class="expertise__info-item">
-          DESIGN
-          <span style="width: calc(100% - 80%);">80%</span>
+          ДИЗАЙН
+          <span style="width: calc(100% - 80%)">80%</span>
         </div>
         <div class="expertise__info-item">
-          DEVELOPMENT
-          <span style="width: calc(100% - 85%);">85%</span>
+          РАЗРАБОТКА
+          <span style="width: calc(100% - 85%)">85%</span>
         </div>
       </div>
       <div class="expertise__text">
@@ -31,24 +31,23 @@
     </div>
     <div class="expertise__items">
       <div class="expertise__item expertise__item--design">
-        <h4 class="expertise__item-title">GRAPHIC DESIGN</h4>
+        <h4 class="expertise__item-title">ГРАФИЧЕСКИЙ ДИЗАЙН</h4>
         <p class="expertise__item-text">
           Рекламный дизайн, дизайн упаковки, этикетки, листовок, каталогов,
           разработка презентаций, дизайн выставочных стендов
         </p>
       </div>
       <div class="expertise__item expertise__item--dev">
-        <h4 class="expertise__item-title">WEB DEVELOPMENT</h4>
+        <h4 class="expertise__item-title">ВЕБ-РАЗРАБОТКА</h4>
         <p class="expertise__item-text">
           Разрабатываем веб сайты от концепции до реализации. Дизайн, верстка,
           программирование и запуск сайт в сеть
         </p>
       </div>
       <div class="expertise__item expertise__item--marketing">
-        <h4 class="expertise__item-title">MARKETING</h4>
+        <h4 class="expertise__item-title">МАРКЕТИНГ</h4>
         <p class="expertise__item-text">
-          Copy Разрабатываем маркетинговое и рекламное продвижение Вашего
-          продукта или услуги под ключ и на любой бюджет.
+          Разрабатываем маркетинговое и рекламное продвижение Вашего продукта или услуги под ключ и на любой бюджет.
         </p>
       </div>
     </div>
