--- a/src/html/blocks/pricing.html
+++ b/src/html/blocks/pricing.html
@@ -1,48 +1,48 @@
 <section class="pricing">
   <div class="container">
-    <h2 class="title pricing__title">Pricing Plans</h2>
+    <h2 class="title pricing__title">Тарифные планы</h2>
     <div class="pricing__items">
       <ul class="pricing__item">
-        <li class="pricing__item-name">Basic</li>
+        <li class="pricing__item-name">Базовый</li>
         <li class="pricing__item-num"><sup>$</sup>290</li>
-        <li>1 Logo Design</li>
-        <li>1 Website Design</li>
-        <li>1 Domain Free</li>
-        <li>3 Month License</li>
-        <li>1 GB Storage</li>
+        <li>1 Дизайн логотипа</li>
+        <li>1 Дизайн сайта</li>
+        <li>1 Домен бесплатно</li>
+        <li>3 Месяца лицензии</li>
+        <li>1 GB дискового пространства</li>
         <li>
           <a class="pricing__item-link" href="#">
-            CHOOSE PLAN
+            ВЫБРАТЬ ПЛАН
           </a>
         </li>
       </ul>
 
       <ul class="pricing__item">
-        <li class="pricing__item-name">Starter</li>
+        <li class="pricing__item-name">Стартовый</li>
         <li class="pricing__item-num"><sup>$</sup>500</li>
-        <li>2 Logo Design</li>
-        <li>2 Website Design</li>
-        <li>1 Domain Free</li>
-        <li>6 Month License</li>
-        <li>1 GB Storage</li>
+        <li>2 Дизайна логотипа</li>
+        <li>2 Дизайна сайта</li>
+        <li>1 Домен бесплатно</li>
+        <li>6 Месяцев лицензии</li>
+        <li>1 GB дискового пространства</li>
         <li>
           <a class="pricing__item-link" href="#">
-            CHOOSE PLAN
+            ВЫБРАТЬ ПЛАН
           </a>
         </li>
       </ul>
 
       <ul class="pricing__item">
-        <li class="pricing__item-name">Professional</li>
+        <li class="pricing__item-name">Профессиональный</li>
         <li class="pricing__item-num"><sup>$</sup>1500</li>
-        <li>3 Logo Design</li>
-        <li>3 Website Design</li>
-        <li>2 Domain Free</li>
-        <li>12 Month License</li>
-        <li>2 GB Storage</li>
+        <li>3 Дизайна логотипа</li>
+        <li>3 Дизайна сайта</li>
+        <li>2 Домена бесплатно</li>
+        <li>12 Месяцев лицензии</li>
+        <li>2 GB дискового пространства</li>
         <li>
           <a class="pricing__item-link" href="#">
-            CHOOSE PLAN
+            ВЫБРАТЬ ПЛАН
           </a>
         </li>
       </ul>
