--- a/src/html/blocks/team.html
+++ b/src/html/blocks/team.html
@@ -1,6 +1,6 @@
-<section class="team">
+<section class="team" id="team">
   <div class="container">
-    <h2 class="title team__title">Our Team</h2>
+    <h2 class="title team__title">Наша команда</h2>
     <div class="team__items">
       <div class="team__item">
         <img src="./img/team-01.jpg" alt="Макс">
@@ -10,12 +10,12 @@
       <div class="team__item">
         <img src="./img/team-02.jpg" alt="Аня">
         <h6 class="team__name">АНЯ</h6>
-        <p class="team__position">Co-Founder</p>
+        <p class="team__position">Маркетолог</p>
       </div>
       <div class="team__item">
         <img src="./img/team-03.jpg" alt="Мила">
         <h6 class="team__name">МИЛА</h6>
-        <p class="team__position">Designer</p>
+        <p class="team__position">Дизайнер</p>
       </div>
     </div>
   </div>
