--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>O...MARKETING</title>
+    <link
+      rel="shortcut icon"
+      href="./img/ico/icon.ico"
+      type="image/x-icon"
+    />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:ital,wght@0,700;0,400;0,500&family=Open+Sans:wght@300;400&family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body>
+  <body id="body">
     @@include('blocks/header.html')
     @@include('blocks/about.html')
     @@include('blocks/expertise.html')
